# Glados

./: .gitignore  Ast.html  Coucou.html  Eval-Ast.html  Eval-Builtins.html  Eval-Conditions.html  Eval-Coucou.html  Eval-Functions.html  Eval-Run.html  LICENSE  Lisp.html  Makefile  Parser-Ast.html  Parser-Coucou.html  Parser-ParserISL.html  Type-Integer.html  Utils-List.html  doc-index.html  glados.cabal  glados.haddock  index.html  stack.yaml
.github/workflows/: SendToEpitech.yml  protect-main.yml
.woodpecker/: auto_release.yml  build.yml  coding-style.yml  coverage.yml  dev-doc.yml  functional_test.yml  mainProtection.yml  pr_build.yml  pr_coverage.yml  push_build.yml  push_coverage.yml  release.yml
app/: Main.hs
doc/: ASM_SPEC.md  CONTRIBUTING.md  CONTRIBUTING_FR.md
doc/Compiler/: ASM.md
src/: Ast.hs  Coucou.hs  Lisp.hs
src/AST/: Ast.hs
src/Common/Type/: Integer.hs
src/Common/Utils/: List.hs
src/Compiler/: Builder.hs  CompilerState.hs  Encoder.hs  Instruction.hs  PsInstruction.hs  Serialize.hs
src/Compiler/ASM/: Assembler.hs  AstToAsm.hs  Compiler.hs  CompilerMonad.hs
src/Compiler/Bytecode/: Encoder.hs
src/Eval/: Ast.hs  Builtins.hs  Conditions.hs  Coucou.hs  Functions.hs  Run.hs
src/Parser/: Ast.hs  Conditions.hs  Coucou.hs  Expression.hs  Lexer.hs  ParserISL.hs  Statement.hs
src/Type/: Integer.hs
src/Utils/: List.hs
src/Z_old/: Main.hs
src/Z_old/Src/: Ast.hs  Lisp.hs
src/Z_old/Src/Eval/: Ast.hs  Builtins.hs  Conditions.hs  Functions.hs  Run.hs
src/Z_old/Src/Parser/: Ast.hs  ParserISL.hs
src/Z_old/Src/Type/: Integer.hs
src/Z_old/Src/Utils/: List.hs
test/: ParseTest.hs
test/Functional/: test.sh
test/Functional/Advanced/: advanced1.scm  advanced2.scm  advanced_named1.scm  advanced_named2.scm
test/Functional/Basic/: builtins2.scm  factorial.scm  lambda2.scm
test/Functional/Simple/: bu_+2.scm  bu_+3.scm  bu_+4.scm  bu_+5.scm  bu_+6.scm  bu_+boolbool.scm  bu_-2.scm  bu_-3.scm  bu_-4.scm  bu_-5.scm  bu_-6.scm  bu_-expr1.scm  bu_:1.scm  bu_:2.scm  bu_:3.scm  bu_:4.scm  bu_:5.scm  bu_:6.scm  bu_:7.scm  bu_:boolbool.scm  bu_:expr1.scm  bu_<3.scm  bu_<4.scm  bu_<5.scm  bu_<6.scm  bu_<arity1.scm  bu_<boolbool.scm  bu_<expr1.scm  bu_<expr2.scm  bu_eq2.scm  bu_eq3.scm  bu_eq4.scm  bu_eq5.scm  bu_eq6.scm  bu_eq7.scm  bu_eq_arity0.scm  bu_eq_arity1.scm  bu_eq_arity3.scm  bu_eq_bool1.scm  bu_eq_bool2.scm  (+58 more)
test/Unit/: AstSpec.hs  CoucouSpec.hs  LispTest.hs  Spec.hs
test/Unit/AST/: AstSpec.hs
test/Unit/Compiler/: BuilderSpec.hs  CompilerStateSpec.hs  EncoderSpec.hs  InstructionSpec.hs  PsInstructionSpec.hs
test/Unit/Compiler/ASM/: AstToAsmSpec.hs  CompilerMonadSpec.hs  CompilerSpec.hs
test/Unit/Compiler/Bytecode/: EncoderSpec.hs
test/Unit/Eval/: AstSpec.hs  BuiltinsSpec.hs  ConditionsSpec.hs  CoucouSpec.hs  FunctionsSpec.hs  RunSpec.hs
test/Unit/Parser/: AstSpec.hs  ConditionsSpec.hs  CoucouSpec.hs  ExpressionSpec.hs  LexerSpec.hs  ParserISLTest.hs  StatementSpec.hs
test/Unit/Type/: IntegerSpec.hs
test/Unit/Utils/: ListSpec.hs
test/Unit/Z_old/: AstSpec.hs  LispTest.hs
test/Unit/Z_old/Eval/: AstSpec.hs  BuiltinsSpec.hs  ConditionsSpec.hs  FunctionsSpec.hs  RunSpec.hs
test/Unit/Z_old/Parser/: AstSpec.hs  ParserISLTest.hs
test/Unit/Z_old/Type/: IntegerSpec.hs
test/Unit/Z_old/Utils/: ListSpec.hs
tools/: coding-style.sh  commit.sh  coverage_test.sh
