cabal-version:       2.2

name:                glados
version:             0.1.0.0
homepage:            https://github.com/githubuser/glados#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:
      src
  exposed-modules:
      Coucou
      Ast
      Lisp
      Parser.Coucou
      Eval.Coucou
      Eval.Run
      Eval.Ast
      Eval.Builtins
      Eval.Conditions
      Eval.Functions
      Compiler.Encoder
      Type.Integer
      Parser.Ast
      Utils.List
      Parser.ParserISL
      Parser.Lexer
      Parser.Expression
      Parser.Statement
  build-depends:
      base >= 4.7 && < 5
    , megaparsec
    , parser-combinators
    , bytestring
    , text
  default-language:    Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints

executable glados
  hs-source-dirs:
      app
  main-is:             Main.hs
  build-depends:
      base >= 4.7 && < 5
    , glados
    , text
  default-language:    Haskell2010
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

test-suite glados-unit
  type:                exitcode-stdio-1.0
  hs-source-dirs:
      test/Unit
  main-is:             Spec.hs
  default-language:    Haskell2010
  other-modules:
      Eval.BuiltinsSpec
      Eval.ConditionsSpec
      Eval.FunctionsSpec
      Eval.AstSpec
      Eval.RunSpec
      Compiler.EncoderSpec
      AstSpec
      Parser.AstSpec
      Parser.ParserISLTest
      Parser.StatementSpec
      Parser.LexerSpec
      Parser.ExpressionSpec
      Type.IntegerSpec
      Utils.ListSpec
      LispTest
  build-depends:
      base >= 4.7 && < 5
    , glados
    , hspec
    , silently
    , megaparsec
    , parser-combinators
    , bytestring
    , text
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -threaded
    -rtsopts
    -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/githubuser/glados
