cabal-version:       2.2

name:                glados
version:             0.1.0.0
homepage:            https://github.com/githubuser/glados#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:
      src
  exposed-modules:
      Z_old.Main
      Z_old.Src.Ast
      Z_old.Src.Lisp
      Z_old.Src.Eval.Run
      Z_old.Src.Eval.Ast
      Z_old.Src.Eval.Builtins
      Z_old.Src.Eval.Conditions
      Z_old.Src.Eval.Functions
      Z_old.Src.Type.Integer
      Z_old.Src.Parser.Ast
      Z_old.Src.Utils.List
      Z_old.Src.Parser.ParserISL
      AST.Ast
      Common.Type.Integer
      Common.Utils.List
      Compiler.ASM.CompilerMonad
      Compiler.ASM.Compiler
      Compiler.ASM.AstToAsm
      Compiler.Bytecode.Encoder
      Compiler.CompilerState
      Compiler.Instruction
      Compiler.PsInstruction
      Parser.Lexer
      Parser.Expression
      Parser.Statement
  build-depends:
      base >= 4.7 && < 5
    , megaparsec
    , parser-combinators
    , bytestring
    , text
    , containers
    , mtl
  default-language:    Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints

executable glados
  hs-source-dirs:
      app
  main-is:             Main.hs
  build-depends:
      base >= 4.7 && < 5
    , glados
    , text
  default-language:    Haskell2010
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

test-suite glados-unit
  type:                exitcode-stdio-1.0
  hs-source-dirs:
      test/Unit
  main-is:             Spec.hs
  default-language:    Haskell2010
  other-modules:
      Z_old.Eval.BuiltinsSpec
      Z_old.Eval.ConditionsSpec
      Z_old.Eval.FunctionsSpec
      Z_old.Eval.AstSpec
      Z_old.Eval.RunSpec
      Z_old.Parser.AstSpec
      Z_old.Parser.ParserISLTest
      Z_old.Type.IntegerSpec
      Z_old.Utils.ListSpec
      Z_old.LispTest
      Compiler.Bytecode.EncoderSpec
      AstSpec
      Parser.StatementSpec
      Parser.LexerSpec
      Parser.ExpressionSpec
      Compiler.InstructionSpec
      Compiler.PsInstructionSpec
      Compiler.CompilerStateSpec
      Compiler.ASM.CompilerMonadSpec
  build-depends:
      base >= 4.7 && < 5
    , glados
    , hspec
    , silently
    , megaparsec
    , parser-combinators
    , bytestring
    , text
    , containers
    , transformers
    , mtl
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -threaded
    -rtsopts
    -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/githubuser/glados
